@@ -59,6 +59,8 @@
       <preference id="gamefoxTimeZone" name="gamefox.timeZone" type="int"/>
 
       <preference id="elements-stopads" name="gamefox.elements.stopads" type="bool"/>
+      <preference id="elements-aml-marknewposts"
+        name="gamefox.elements.aml.marknewposts" type="bool"/>
     </preferences>
 
 
@@ -107,6 +109,7 @@
                       <checkbox preference="gamefox-pref-quickpost-link" label="&page.elements.topics.quickpost;"/>
                       <checkbox preference="gamefox-pref-tracked-boardlink" label="&page.elements.topics.trackedlink;"/>
                       <checkbox preference="gamefox-pref-lastpostlink" label="&page.elements.topics.lastpostlink;"/>
+                      <checkbox preference="elements-aml-marknewposts" label="&page.elements.topics.marknewposts;"/>
                     </vbox>
                   </groupbox>
 
