@@ -14,6 +14,7 @@ pref("gamefox.elements.topics.lastpostlink", true);
 pref("gamefox.elements.marktc", true);
 pref("gamefox.elements.marktc.marker", "\u272A");
 pref("gamefox.elements.stopads", true);
+pref("gamefox.elements.aml.marknewposts", true);
 
 pref("gamefox.msgsPerPage", 50);
 pref("gamefox.tpcsPerPage", 50);
